--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-server:
-    port: 9999
-    servlet:
-        context-path: /member
-# 配置不限制port请求header大小
-    max-http-header-size: 0
+
+
+server.port=9999
+server.servlet.context-path=/member
+server.max-http-header-size=0
 
 spring.data.mongodb.uri = mongodb://127.0.0.1:27017/test
 spring.datasource.druid.driver-class-name = com.mysql.jdbc.Driver
@@ -21,24 +20,14 @@ spring.datasource.druid.min-evictable-idle-time-millis = 300000
 spring.datasource.druid.test-while-idle = true
 spring.datasource.druid.test-on-borrow = false
 spring.datasource.druid.test-on-return = false
-mybatis-plus:
-    mapper-locations: classpath:/com/xuzhch/springmongodemo/demo/dao/**.xml
-    #实体扫描，多个package用逗号或者分号分隔
-    typeAliasesPackage : com.xuzhch.springmongodemo.demo.entity
-    global-config:
-    #数据库相关配置
-        db-config:
-        #主键类型  AUTO:"数据库ID自增", INPUT:"用户输入ID", ID_WORKER:"全局唯一ID (数字类型唯一ID)", UUID:"全局唯一ID UUID";
-            id-type: ID_WORKER
-            #字段策略 IGNORED:"忽略判断",NOT_NULL:"非 NULL 判断"),NOT_EMPTY:"非空判断"
-            field-strategy: NOT_NULL
-            #驼峰下划线转换
-            column-underline: true
-    #db-type: mysql
-    banner: false
-#原生配置
-configuration:
-    map-underscore-to-camel-case: true
-    cache-enabled: false
-    call-setters-on-nulls: true
-    jdbc-type-for-null: 'null'
+
+mybatis-plus.mapper-locations=classpath:/com/xuzhch/springmongodemo/demo/dao/**.xml
+mybatis-plus.typeAliasesPackage=com.xuzhch.springmongodemo.demo.entity
+mybatis-plus.global-config.db-config.id-type=id_worker
+mybatis-plus.global-config.db-config.field-strategy=not_null
+mybatis-plus.global-config.db-config.column-underline=true
+mybatis-plus.global-config.banner=false
+mybatis-plus.configuration.cache-enabled=false
+mybatis-plus.configuration.map-underscore-to-camel-case=true
+mybatis-plus.configuration.call-setters-on-nulls=true
+mybatis-plus.configuration.jdbc-type-for-null=null
